# MyGame

./: CMakeLists.txt
include/: Aircraft.h  Entity.h  Game.h  ResourceHolder.h  SceneNode.h  SpriteNode.h  World.h
src/: Aircraft.cpp  Entity.cpp  Game.cpp  ResourceHolder.cpp  SceneNode.cpp  SpriteNode.cpp  World.cpp  main.cpp
